# AIMXT-public

./: .env.sample  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  mkdocs.yml
bindings/AIMXT/: Cargo.toml  README.md  build.rs  pyproject.toml
bindings/AIMXT/AIMXT/: __init__.py  static_val.py
bindings/AIMXT/AIMXT/agent/: admin.py  agent.py  agents.py
bindings/AIMXT/AIMXT/agent/types/: job.py
bindings/AIMXT/AIMXT/core/: admin.py  worker.py
bindings/AIMXT/AIMXT/llm/: llm_task_coordinator.py  llm_task_operator.py
bindings/AIMXT/AIMXT/llm/llm/: llm_executor.py
bindings/AIMXT/AIMXT/task/: task_coordinator.py  task_human_intractive_operator.py  task_operator.py  test.py
bindings/AIMXT/AIMXT/utils/: agent_monitor.py
bindings/AIMXT/examples/auction/: README.md  single_item_auction.py
bindings/AIMXT/examples/blog_writer/: editor_panel.py
bindings/AIMXT/examples/stock_market_analyser/: server_mode.py  standalone_mode.py
bindings/AIMXT/examples/time_scheduling/: README.md  time_scheduling.py
bindings/AIMXT/src/: AIMXT.udl  lib.rs  workspace.rs
bindings/AIMXT/src/utils/: env.rs
bindings/AIMXT/src/workspace/: admin_agent.rs  agent.rs  message.rs  worker_agent.rs
bindings/AIMXT/tests/: AIMXT_agent_test.py  llm_agen_test.py  single_llm_agent.py  test_agent.py  test_agents.py  test_prompt.py
bindings/AIMXT/tests/example_project/: chat_gpt_task_manager.py  task_manager_AIMXT_result.py  tasks_2024-12-12.csv  tasks_2024-12-15.csv
bindings/AIMXT/tests/llm_agents/: task_manager-ollama-sub-task-automated.py  task_manager-ollama-sub-task.py  task_manager-ollama-task-automation-with-dependencies.py  task_manager-ollama.py  task_manager-open-ai.py  tasks_with_dependencies.py
bindings/AIMXT/tests/llm_test/: llm_test_open_ai.py  llm_writer.py  stock_analyser.py  stock_analyser_async.py
bindings/AIMXT/tests/server_agents/: agent_one.py  monitor_agent.py  server_agent.py
bindings/AIMXT/tests/tasks/: article-writer-agents-gen-with-tools-openai.py  article-writer-agents-gen-with-tools.py  article-writer-agents-gen.py  article-writer-agents.py  llm_software_agency-gorq.py  llm_software_agency.py  manage_tasks-agents.py  manage_tasks.py  sample_game.py  task_agent.py  task_with_human_inputs.py  task_with_human_inputs_llma.py
bindings/AIMXT/tests/test_worker/: auction.py  meeting_schedular.py  task_manager.py  test.py  test_game_board.py
bindings/AIMXT/tests/tools/: file_publisher_tool_test.py
libs/deeruni/: Cargo.toml
libs/deeruni/src/: common.rs  main.rs
libs/deeruni/src/peer/: behaviour.rs  message.rs  node.rs
(+23 files in other folders)
